# ic_agent_experimentation

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  README.md  backlog.md  pyproject.toml
config/: probe_budget.yaml  unified_probe_budget.yaml
config/domains/: example.yaml  gai_copilot_marketing_brand_guidance_ghq.yaml  gai_copilot_marketing_category_ghq.yaml
corpus/: similar_plans.yaml
corpus/gai_copilot_marketing_brand_guidance_ghq/: similar_plans.yaml
corpus/gai_copilot_marketing_category_ghq/: similar_plans.yaml
corpus/unified/: similar_plans.yaml
docs/: archetecture.md  brand_highlights_extracted.md  flow_diagram.html  prompt_of_prompts.md  unified_flow_diagram.html  unified_question_graph_mock.html  unified_question_graph_mock_v2.html  unified_question_graph_mock_v3.html
docs/metadata/: category.md
src/ic_agent/: main.py
src/unified_domain/: main.py
tests/: conftest.py  test_config.py  test_corpus_paths.py  test_decision_consultant_service.py  test_decision_engine_service.py  test_domain_loader.py  test_end_to_end_graph.py  test_evidence_ledger.py  test_graph_routing.py  test_llm_integration.py  test_planner_consultant_service.py  test_planner_service.py  test_retrieval_service.py  test_similar_plan_service.py  test_synthesizer_service.py  test_usecase_docs.py
tests/test_runs/: mdsp.md
tests/unified/: test_domain_agent_executor.py  test_domain_router_service.py  test_observability.py  test_unified_end_to_end.py  test_unified_integration.py  (+1 more)
ui/: app.py  unified_app.py
(+73 files in other folders)
