[project]
name = "ic-agent"
version = "0.1.0"
description = "Agentic analytics framework with iterative probing (LangGraph + OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "truststore>=0.9",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.2"]
ui = ["streamlit>=1.38"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
]

[project.scripts]
ic-agent = "ic_agent.main:main"
ic-agent-unified = "unified_domain.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ic_agent", "src/unified_domain"]

[tool.uv]
package = true
system-certs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
